corrected contrast

--- a/css/main.css
+++ b/css/main.css
@@ -115,14 +115,16 @@ body {
   font-weight: 700;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  
 }
 
 .div-1, .div-2, .div-3 {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
-  color: rgb(177, 104, 10);
+  color: rgb(236, 214, 184);
   line-height: 1.5em;
-  background: rgb(199, 172, 137);
-  background:rgba(206, 180, 156, 0.74);
+  background: rgb(255, 193, 113);
+  background:rgba(172, 105, 43, 0.74);
   height: 300px;
   width: 28%;
   padding: 0 5px 0 10px;
